src/test/ui/generic-associated-types/issue-70304.stderr
error[E0106]: missing lifetime specifiers
  --> $DIR/issue-70304.rs:48:41
   |
LL | fn create_doc() -> impl Document<Cursor<'_> = DocCursorImpl<'_>> {
   |                                         ^^                  ^^ expected named lifetime parameter
   |                                         |
   |                                         expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
   |
LL | fn create_doc() -> impl Document<Cursor<'static> = DocCursorImpl<'static>> {
   |                                         ~~~~~~~                  ~~~~~~~

error: missing required bound on `Cursor`
  --> $DIR/issue-70304.rs:4:5
   |
LL |     type Cursor<'a>: DocCursor<'a>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |                                   |
   |                                   help: add the required where clause: `where Self: 'a`
   |
   = note: this bound is currently required to ensure that impls have maximum flexibility
   = note: we are soliciting feedback, see issue #87479 <https://github.com/rust-lang/rust/issues/87479> for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
